# gate-allocation-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
proto/: allocation.proto
src/: main.rs
src/domain/: mod.rs
src/engine/: mod.rs
src/grpc/: mod.rs
test/grpcurl/: allocate_gate.json  get_gate_assignments.json  get_gate_assignments_t5.json  report_disruption_cancellation.json  report_disruption_delay.json  report_disruption_gate_unavailable.json  stream_disruptions.json
